{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 385,
  "lineage": "2854c23a-b68c-9d46-79e9-d687705673c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip-for-nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.5",
            "domain": "vpc",
            "id": "eipalloc-039401220f37768ff",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-169-183-205.compute-1.amazonaws.com",
            "public_ip": "35.169.183.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Development-EIP"
            },
            "tags_all": {
              "Name": "Development-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-048f6ed62451373d9",
            "arn": "arn:aws:ec2:us-east-1:202467142321:instance/i-0e5bf675bd679b975",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5bf675bd679b975",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Infotek",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05561a33784ba765c",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-52-91-100-44.compute-1.amazonaws.com",
            "public_ip": "52.91.100.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c0f809302fa2b72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01968e2a58bcba5d0",
            "tags": {
              "Name": "Jenkins-Instance"
            },
            "tags_all": {
              "Name": "Jenkins-Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0baaebda1b7ed1142"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_allow_ssh_jenkins",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "development-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:internet-gateway/igw-02786212ee3c3dfde",
            "id": "igw-02786212ee3c3dfde",
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-IGW"
            },
            "tags_all": {
              "Name": "Development-IGW"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-039401220f37768ff",
            "id": "nat-01fe1b373cfcf3190",
            "network_interface_id": "eni-000cbc93ae806e99e",
            "private_ip": "10.0.1.12",
            "public_ip": "35.169.183.205",
            "subnet_id": "subnet-01968e2a58bcba5d0",
            "tags": {
              "Name": "Development-NATGW"
            },
            "tags_all": {
              "Name": "Development-NATGW"
            }
          },
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005d0a4c6b937b0381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01fe1b373cfcf3190",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005d0a4c6b937b038",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip-for-nat-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.private-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02786212ee3c3dfde",
            "id": "r-rtb-0cb0e9159ac1c5b811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb0e9159ac1c5b81",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.development-igw",
            "aws_route_table.public-route-table",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:route-table/rtb-005d0a4c6b937b038",
            "id": "rtb-005d0a4c6b937b038",
            "owner_id": "202467142321",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Private-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Private-RouteTable"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:route-table/rtb-0cb0e9159ac1c5b81",
            "id": "rtb-0cb0e9159ac1c5b81",
            "owner_id": "202467142321",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Development-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Development-Public-RouteTable"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d57909724a208c07",
            "route_table_id": "rtb-005d0a4c6b937b038",
            "subnet_id": "subnet-05071672b9f64e7e1"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096563c33f0eb2912",
            "route_table_id": "rtb-005d0a4c6b937b038",
            "subnet_id": "subnet-07044d598f3923ba9"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084c31b109a827d2f",
            "route_table_id": "rtb-005d0a4c6b937b038",
            "subnet_id": "subnet-07e788bace22b25af"
          },
          "dependencies": [
            "aws_route_table.private-route-table",
            "aws_subnet.private-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b32c78fa26caf63",
            "route_table_id": "rtb-0cb0e9159ac1c5b81",
            "subnet_id": "subnet-01968e2a58bcba5d0"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0090d088274073d1a",
            "route_table_id": "rtb-0cb0e9159ac1c5b81",
            "subnet_id": "subnet-0ad3726410e2fe9d9"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-3-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c238bddf59b94e1",
            "route_table_id": "rtb-0cb0e9159ac1c5b81",
            "subnet_id": "subnet-06af668436c0b5148"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-3",
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_ssh_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:security-group/sg-0baaebda1b7ed1142",
            "description": "Allow SSH and Jenkins inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baaebda1b7ed1142",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_ssh_jenkins",
            "name_prefix": "",
            "owner_id": "202467142321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-05071672b9f64e7e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05071672b9f64e7e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-1"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-07044d598f3923ba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-07044d598f3923ba9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-2"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-07e788bace22b25af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-07e788bace22b25af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Private-Subnet-3"
            },
            "tags_all": {
              "Name": "Development-Private-Subnet-3"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-01968e2a58bcba5d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01968e2a58bcba5d0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-1"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-0ad3726410e2fe9d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0ad3726410e2fe9d9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-2"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:subnet/subnet-06af668436c0b5148",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06af668436c0b5148",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-Public-Subnet-3"
            },
            "tags_all": {
              "Name": "Development-Public-Subnet-3"
            },
            "vpc_id": "vpc-0eb9df04d684e43d3"
          },
          "dependencies": [
            "aws_vpc.development-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "development-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:202467142321:vpc/vpc-0eb9df04d684e43d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0312ffa5bac02ea32",
            "default_route_table_id": "rtb-05111e516774b3fa2",
            "default_security_group_id": "sg-07d43465ff7313485",
            "dhcp_options_id": "dopt-c736a4a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eb9df04d684e43d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05111e516774b3fa2",
            "owner_id": "202467142321",
            "tags": {
              "Name": "Development-VPC"
            },
            "tags_all": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}